indenting_unnecessarily.txt
Indenting Unnecessarily

If you accidentally indent a line that doesn’t need to be indented, Python informs you about the unexpected indent:

hello_world.py

   message = "Hello Python world!"
➊     print(message)

We don’t need to indent the print() call ➊, because it isn’t part of a loop; hence, Python reports that error:

  File "hello_world.py", line 2
    print(message)
    ^
IndentationError: unexpected indent

